add duration as request parameter from gateway
