# runner/gen_openapi.py
@@ -48,6 +48,7 @@ def translate_to_gateway(openapi: dict) -> dict:
         Differences between 'runner' and 'gateway' entrypoints:
         - 'health' endpoint is removed.
         - 'model_id' is enforced in all endpoints.
+        - 'job_info' property is removed from all schemas.
         - 'VideoResponse' schema is updated to match the Gateway's transcoded mp4
             response.
 
@@ -75,6 +76,11 @@ def translate_to_gateway(openapi: dict) -> dict:
                         schema = openapi["components"]["schemas"][schema_name]
                         if "model_id" in schema["properties"]:
                             schema["required"].append("model_id")
+                        # Remove 'job_info' property if it exists
+                        if "job_info" in schema["properties"]:
+                            schema["properties"].pop("job_info")
+                            if "job_info" in schema["required"]:
+                                schema["required"].remove("job_info")
 
     # Update the 'VideoResponse' schema to match the Gateway's response.
     # NOTE: This is necessary because the Gateway transcodes the runner's response and
